# egui-mp3s

./: Cargo.toml  README.md  _project.vim
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs  music.rs  player.rs
tests/: test_music.rs
