[package]
name = "egui-mp3s"
version = "0.1.0"
authors = ["Andrew Radev <andrew.radev@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
dirs = "4.0"
id3 = "0.6.6"
walkdir = "2.3.2"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
